# starter_kit

./: .coveragerc  .dockerignore  .pre-commit-config.yaml  README.md  config.yaml  cookiecutter.json  pyproject.toml
docs/source/: conf.py  index.rst  module1.rst
src/: setup.py
src/api/: main.py
src/api/module1/: routes.py
src/api/module2/: routes.py
src/app/: __init__.py
src/app/module1/application/use_cases/: basic_application.py
src/app/module1/domain/: item.py
src/app/module1/infrastructure/alembic/: env.py  foo.txt
src/app/module1/infrastructure/databases/: sqlalchemy.py
src/app/module1/infrastructure/models/: __init__.py  base_model.py  item_model.py
src/app/module1/infrastructure/repository/: item_repository.py
tests/test_app/test_module1/test_domain/: test_item.py
tests/test_app/test_module1/test_infrastructure/test_repository/: test_item_repository.py
{{cookiecutter.project_name}}/: Dockerfile  INSTRUCTIONS.md  README.md  config.yaml  requirements.txt
{{cookiecutter.project_name}}/docs/source/: index.rst  {{cookiecutter.module_name}}.rst
{{cookiecutter.project_name}}/src/: alembic.ini  setup.py
{{cookiecutter.project_name}}/src/api/: main.py
{{cookiecutter.project_name}}/src/api/{{cookiecutter.module_name}}/: routes.py
{{cookiecutter.project_name}}/src/app/: __init__.py
{{cookiecutter.project_name}}/src/app/{{cookiecutter.module_name}}/domain/: __init__.py
{{cookiecutter.project_name}}/tests/test_app/test_{{cookiecutter.module_name}}/test_domain/: test_item.py
(+6 files in other folders)
